--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "format": "prettier --write \"src/**/*.{js,jsx}\""
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/hopesunknown/adopt-me-react/issues"
   },
-  "homepage": "https://github.com/hopesunknown/adopt-me-react#readme"
+  "homepage": "https://github.com/hopesunknown/adopt-me-react#readme",
+  "devDependencies": {
+    "prettier": "^2.6.2"
+  }
 }
